k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chrono-synth
  labels:
    app.kubernetes.io/part-of: chrono-synth
    # PodSecurityAdmission: enforce restricted profile.
    # https://kubernetes.io/docs/concepts/security/pod-security-admission/
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
